// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`handleSubmit calls changeCustomerPassword if new password is provided 1`] = `
Object {
  "variables": Object {
    "currentPassword": "bar",
    "newPassword": "notBar",
  },
}
`;

exports[`handleSubmit calls setCustomerInformationQuery 1`] = `
Object {
  "variables": Object {
    "email": "foobar@express.net",
    "firtname": "Foo",
    "lastname": "Bar",
  },
}
`;

exports[`return correct shape for initial customer data 1`] = `
Object {
  "cancelUpdateMode": [Function],
  "formErrors": Array [
    undefined,
    undefined,
  ],
  "handleChangePassword": [Function],
  "handleSubmit": [Function],
  "initialValues": Object {
    "customer": Object {
      "email": "foobar@express.net",
      "firtname": "Foo",
      "id": null,
      "lastname": "Bar",
    },
  },
  "isDisabled": false,
  "isSignedIn": true,
  "isUpdateMode": false,
  "loadDataError": null,
  "shouldShowNewPassword": false,
  "showUpdateMode": [Function],
}
`;

exports[`return correct shape while data is loading 1`] = `
Object {
  "cancelUpdateMode": [Function],
  "formErrors": Array [
    undefined,
    undefined,
  ],
  "handleChangePassword": [Function],
  "handleSubmit": [Function],
  "initialValues": undefined,
  "isDisabled": false,
  "isSignedIn": true,
  "isUpdateMode": false,
  "loadDataError": undefined,
  "shouldShowNewPassword": false,
  "showUpdateMode": [Function],
}
`;
